--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,2 +1,14 @@
-/node_modules
+# Dependency directories
+node_modules/
+
+# dotenv environment variable files
 .env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# Optional npm cache directory
+.npm
+
+package-lock.json
