--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "^2.7.21",
     "@types/react": "^18.2.55",
     "@types/react-datepicker": "^6.0.1",
     "@types/react-dom": "^18.2.19",
