--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,15 +4,22 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@googlemaps/js-api-loader": "^1.16.6",
     "@headlessui/react": "^1.7.18",
+    "@mui/material": "^5.15.10",
+    "@react-google-maps/api": "^2.19.3",
+    "@vis.gl/react-google-maps": "^0.7.0",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
+    "google-map-react": "^2.2.1",
     "jotai": "^2.6.4",
     "react": "^18.2.0",
     "react-datepicker": "^6.1.0",
@@ -25,6 +32,7 @@
     "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@types/google-map-react": "^2.1.10",
     "@types/mapbox-gl": "^2.7.21",
     "@types/react": "^18.2.55",
     "@types/react-datepicker": "^6.0.1",
