--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.1",
+    "nodemailer": "^6.9.11",
     "send-http-axios-doc": "^1.35.0",
     "sequelize": "^6.36.0",
     "swagger-jsdoc": "^6.2.8",
