--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@vis.gl/react-google-maps": "^0.7.0",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "google-map-react": "^2.2.1",
     "jotai": "^2.6.4",
     "react": "^18.2.0",
