--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "send-http-axios-doc": "^1.35.0",
     "sequelize": "^6.36.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
