--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^3.3.1",
     "google-map-react": "^2.2.1",
     "jotai": "^2.6.4",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
